# rust-blog-api

./: .gitignore  Cargo.toml  README.md
entities/: Cargo.toml
entities/src/: lib.rs  post.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_user_table.rs  m20220101_000002_create_post_table.rs
src/: main.rs
src/routes/: mod.rs  posts.rs  users.rs
