[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entities", "migration"]

[dependencies]
actix-web = "4.2.1"
dotenvy = "0.15.6"
sea-orm = { version = "0.10.5", features = ["runtime-actix-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.151", features = ["derive"] }
tracing-subscriber = "0.3.16"
entities = { path = "entities" }
migration = { path = "migration" }